# aula_19_fastapi

./: .dockerignore  Dockerfile  README.md  database.py  main.py  model.py  pyproject.toml  schema.py
