[project]
name = "aula-19-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Sanches",email = "sanchesmil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart] (>=0.115.11,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
